--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 rows="5"
                 cols="100">
             </textarea>
-            <button>submmit</button>
+            <button>submit</button>
         </form>
     </div>
 </body>
